--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo:500|Open+Sans:300,700");
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@500&family=Open+Sans:wght@300&display=swap');
 
 *,
 *::before,
@@ -15,8 +15,6 @@ body,
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
   background-color: #987284;
 }
 
