--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ header {
   text-align: center;
   cursor: pointer;
   font-family: 'Open Sans', sans-serif;
+  transition-duration: 0.5s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #3C1C3D;
+  color: white;
 }
 
 button[disabled] {
